syntax = "proto3";

option csharp_namespace = "SzakdolgozatGRPCSzerver";

package Szakdolgozat;

service SzakdolgozatGreeter {
	rpc Enter(DoorEvent) returns (Result);
	rpc Exit(DoorEvent) returns (Result);

	rpc ListDoors(Empty) returns (stream DoorInformation);

	rpc EnterEntrance(DoorEvent) returns (Result);
	rpc ExitEntrance(DoorEvent) returns (Result);
}

message Empty{
	
}
message Result{
	string message = 1;
}
message DoorEvent{
	string card_ID = 1;
	int32 door_ID = 2;
	string door_name = 3;
}

message DoorInformation{
	int32 door_ID = 1;
	string door_name = 2;
}
